# midi-chords-gen

./: .gitignore  CMakeLists.txt  CMakeLists.win.txt  readme.md
data/: data.json
include/: intervals.hpp  notes.h  notes.hpp  phrase.hpp  player.hpp  range.h  range.hpp
src/: main.cpp  phrase.cpp  player.cpp  range.cpp
